# quicksort

./: .gitignore  Makefile.am  README  README.md  configure.ac
src/: Makefile.am  main.c  quicksort.c  quicksort.h
tests/: .check_quicksort.c.swo  Makefile.am  check_quicksort.c
